# ohtuvarasto

./: README.md  coverage.xml  pyproject.toml  tiedosto1.txt  toinenTiedosto.txt
.github/workflows/: main.yml
hakemisto1/: tiedosto3.txt
hakemisto2/: tiedosto4.txt
src/: varasto.py
src/tests/: varasto_test.py
