[tool.poetry]
name = "varasto"
version = "0.1.0"
description = ""
authors = ["Jaakko Rossi <jaakkorossi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
coverage = "^7.6.4"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
